<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		attendee_events
	 *	@date 		Saturday 30th of March 2024 02:13:47 AM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->

	<TextView android:id="@+id/upcoming_events"
		android:textStyle="bold"
		android:textSize="30sp"
		android:textColor="@color/sky_blue"
		android:layout_marginStart="14dp"
		android:layout_marginTop="20dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		android:text="@string/upcoming_events_string"
		 />

	<ListView
		android:id="@+id/event_list_attendee"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		app:layout_constraintTop_toBottomOf="@id/upcoming_events"
		android:layout_marginTop="30dp"
		android:layout_marginBottom="15dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintBottom_toTopOf="@id/browse_button"
		/>


	<TextView android:id="@+id/browse_button"
		android:textSize="16sp"
		android:textColor="@color/sky_blue"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingHorizontal="50dp"
		android:paddingVertical="10dp"
		android:text="@string/add_string"
		android:background="@drawable/ellipse_2_shape"
		android:gravity="center"
		android:layout_marginStart="5dp"
		android:layout_marginEnd="5dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toStartOf="@id/map_button"
		android:layout_marginBottom="75dp"
		android:elevation="2dp"
		/>
	<TextView android:id="@+id/map_button"
		android:textSize="16sp"
		android:textColor="@color/sky_blue"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingHorizontal="50dp"
		android:paddingVertical="10dp"
		android:text="@string/map"
		android:background="@drawable/ellipse_2_shape"
		android:gravity="center"
		android:layout_marginStart="5dp"
		android:layout_marginEnd="5dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toEndOf="@id/browse_button"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_marginBottom="75dp"
		android:elevation="2dp"
		/>

	<View   android:id="@+id/rectangle_12"
		android:background="@drawable/gradient_shape_attendee"
		android:layout_marginStart="0dp"
		android:layout_marginTop="0dp"
		android:layout_width="match_parent"
		android:layout_height="353dp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:elevation="-4dp"/>

	<LinearLayout
		android:id="@+id/nav_bar"
		android:layout_width="match_parent"
		android:layout_height="60dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		android:orientation="horizontal"
		android:background="#ffa4e4ff"
		android:weightSum="5">
		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/home_button"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			>


			<ImageView android:id="@+id/nav_vector"
				android:src="@drawable/nav_vector"
				android:contentDescription="home_icon"
				android:layout_width="25dp"
				android:layout_height="25dp"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				android:layout_marginTop="10dp"/>

			<TextView
				android:textStyle="bold"
				android:textColor="@color/sky_blue"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				android:layout_marginBottom="5dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/home_string"
				 />

		</androidx.constraintlayout.widget.ConstraintLayout>


		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/event_button"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			>

			<TextView
				android:textStyle="bold"
				android:textColor="@color/sky_blue"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				android:layout_marginBottom="5dp"
				android:text="@string/event_string"
				/>

			<ImageView android:id="@+id/nav_vector_ek3"
				android:src="@drawable/nav_vector_ek3"
				android:contentDescription="event_icon"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				android:layout_marginTop="10dp"
				android:layout_width="25dp"
				android:layout_height="25dp" />

		</androidx.constraintlayout.widget.ConstraintLayout>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/scanner_button"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			>

			<TextView android:id="@+id/event"
				android:textStyle="bold"
				android:textColor="@color/sky_blue"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				android:layout_marginBottom="5dp"
				android:text="@string/scanner_string"
				/>

			<ImageView android:id="@+id/nav_vector_ek1"
				android:src="@drawable/nav_vector_ek1"
				android:contentDescription="scanner_icon"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				android:layout_marginTop="10dp"
				android:layout_width="25dp"
				android:layout_height="25dp" />

		</androidx.constraintlayout.widget.ConstraintLayout>


		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/notification_button"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			>

			<TextView
				android:textStyle="bold"
				android:textColor="@color/sky_blue"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				android:layout_marginBottom="5dp"
				android:text="@string/notification_string"
				/>

			<ImageView android:id="@+id/nav_vector_ek2"
				android:src="@drawable/nav_vector_ek2"
				android:contentDescription="notification_icon"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				android:layout_marginTop="10dp"
				android:layout_width="25dp"
				android:layout_height="25dp" />

		</androidx.constraintlayout.widget.ConstraintLayout>


		<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/bottom_profile_icon"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="match_parent"
			>

			<TextView
				android:textStyle="bold"
				android:textColor="@color/sky_blue"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				android:layout_marginBottom="5dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/profile_string"
				 />

			<ImageView android:id="@+id/nav_vector_ek4"
				android:src="@drawable/nav_vector_ek4"
				android:contentDescription="profile_icon_body"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				android:layout_marginTop="25dp"
				android:layout_width="25dp"
				android:layout_height="wrap_content" />

			<ImageView android:id="@+id/nav_vector_ek5"
				android:src="@drawable/nav_vector_ek5"
				android:contentDescription="profile_icon_head"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				android:layout_marginTop="12dp"
				android:layout_width="8.75dp"
				android:layout_height="8.75dp" />

		</androidx.constraintlayout.widget.ConstraintLayout>
	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>