...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_home"
        />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/my_event_button"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="70dp"
        android:text="@string/my_events"
        app:layout_constraintBottom_toBottomOf="parent"
...
