...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/browse_text"
        app:layout_constraintBottom_toTopOf="@id/return_button"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp">

    </ListView>

    <TextView
...
