...
    <string name="app_name">QRCodeReader</string>
    <string name="title_home">Home</string>
    <string name="title_scan">Scan</string>
    <string name="title_notifications">Notifications</string>
    <string name="UploadProfilePicText">Upload Profile Picture</string>
    <string name="RemoveProfilePictureText">Remove Profile Picture</string>
    <string name="LocationEnableText">Location Access</string>
    <string name="BecomeOrganizerText">Become Organizer</string>
    <string name="SaveProfileText">Save Changes</string>
    <string name="CancelProfileChangeText">Cancel</string>
    <string name="profile">Profile</string>
    <string name="my_events">My Events</string>
    <string name="enter_the_number_of_attendees">Enter the number of attendees</string>
...
