...
				android:layout_gravity="center_vertical"
				android:text="@string/hello_example_com_string"
				/>
		</LinearLayout>
	</RelativeLayout>

	<TextView android:id="@+id/EditButton"
		android:textSize="16sp"
		android:textColor="@color/sky_blue"
		android:layout_width="125dp"
		android:layout_height="wrap_content"
		android:paddingHorizontal="30dp"
		android:paddingVertical="10dp"
...
